# weztui

./: CLAUDE.md  Cargo.toml  README.md
docs/plans/: companion-plugin.md  fuzzy-finder.md  mvp.md  sessions.md  visual-layouts.md  wezterm-integration.md
plugin/: init.lua
src/: app.rs  install.rs  ipc.rs  main.rs  model.rs  search.rs  session.rs  settings.rs  wezterm.rs
src/ui/: help.rs  layout_preview.rs  mod.rs  pane_preview.rs  popup.rs  search.rs  session_pick.rs  settings_ui.rs  status.rs  tree.rs
